--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Student Information Form</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
 </head>
 <body>
 
